Implement print! and println! macros and add mutex

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,16 @@ init = { path = "init" }
 macros = { path = "macros" }
 register = "0.3.2"
 
+
+[dependencies.utils]
+path = "utils"
+features = ["no-atomics"]
+version = "0.1.0"
+
 [workspace]
 members = [
     "init",
     "macros",
     "macro_tests",
+    "utils",
 ]
